--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -38,7 +38,10 @@ $colors: (
   secondary:  #32db64,
   danger:     #f53d3d,
   light:      #f4f4f4,
-  dark:       #222
+  dark:       #222,
+  primary-yellow: #FFEB3B,
+  secodary-yellow: #9E9E9E
+
 );
 
 
